syntax = "proto3";

package product;

// Product Service - Manages product catalog and inventory
service ProductService {
  rpc CreateProduct (CreateProductRequest) returns (Product);
  rpc FindProductById (FindProductByIdRequest) returns (Product);
  rpc FindAllProducts (FindAllProductsRequest) returns (ProductList);
  rpc UpdateProduct (UpdateProductRequest) returns (Product);
  rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse);
  rpc UpdateStock (UpdateStockRequest) returns (Product);
  rpc CheckStock (CheckStockRequest) returns (CheckStockResponse);

  // Client Streaming RPC - Bulk product uploads
  rpc BulkCreateProducts (stream CreateProductRequest) returns (BulkCreateProductsResponse);
}

// Messages
message Product {
  string id = 1;
  string name = 2;
  double price = 3;
  int32 stock = 4;
  string created_at = 5;
}

message ProductList {
  repeated Product products = 1;
  int32 total = 2;
}

message CreateProductRequest {
  string name = 1;
  double price = 2;
  int32 stock = 3;
}

message FindProductByIdRequest {
  string id = 1;
}

message FindAllProductsRequest {
  int32 page = 1;
  int32 limit = 2;
}

message UpdateProductRequest {
  string id = 1;
  optional string name = 2;
  optional double price = 3;
  optional int32 stock = 4;
}

message DeleteProductRequest {
  string id = 1;
}

message DeleteProductResponse {
  bool success = 1;
  string message = 2;
}

message UpdateStockRequest {
  string id = 1;
  int32 quantity = 2; // positive to add, negative to reduce
}

message CheckStockRequest {
  string id = 1;
  int32 required_quantity = 2;
}

message CheckStockResponse {
  bool available = 1;
  int32 current_stock = 2;
}

// Client Streaming - Bulk product creation response
message BulkCreateProductsResponse {
  int32 total_received = 1;  // Total products received in stream
  int32 created = 2;          // Successfully created
  int32 failed = 3;           // Failed to create
  repeated ProductError errors = 4;  // Details of failures
}

message ProductError {
  string product_name = 1;
  string error_message = 2;
}
